# GPR-MIPS-Simulator

./: Lab2.s  README.md  assembly.s  palindrome.s
gprSim/: CMakeLists.txt  result2.txt
gprSim/include/: cpu.hpp  encoder.hpp  instructions.hpp  loader.hpp  memory.hpp  parser.hpp
gprSim/include/loader/: encoder.hpp  loader.hpp  parser.hpp  source_parser.hpp
gprSim/include/processor/: binary_parser.hpp  cpu.hpp  cycles.hpp  instructions.hpp  memory.hpp  pipeline.hpp
gprSim/src/: cpu.cpp  encoder.cpp  instructions.cpp  loader.cpp  main.cpp  parser.cpp
gprSim/src/loader/: encoder.cpp  loader.cpp  parser.cpp  source_parser.cpp  symbol_table.cpp
gprSim/src/processor/: binary_parser.cpp  cpu.cpp  cycles.cpp  instructions.cpp  pipeline.cpp
helpers/: CMakeLists.txt
helpers/include/: array_helpers.hpp  debug_helpers.hpp  file_handling_helpers.hpp
helpers/src/: array_helpers.cpp  debug_helpers.cpp  file_handling_helpers.cpp
